{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MainActionMap",
            "id": "bd258e5c-210c-4863-9e18-527ce6a17152",
            "actions": [
                {
                    "name": "ToggleConstruction",
                    "type": "Button",
                    "id": "c084cf13-784c-459e-b432-1e04a2c9f98f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "2819d2a9-1b90-4f82-92ca-1b3e2a0d3333",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "d7d8b0d4-7635-4100-9c43-5ad0c237fc56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseAndResume",
                    "type": "Button",
                    "id": "933ee92d-9046-4086-9d63-a34c1011a432",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ebfa163-b287-4b4f-bb65-e2e8cb3c6d49",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConstruction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15f81a80-5bbc-4d5b-8b47-40d00c8faade",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd18d1c0-0568-4c88-9220-a94c3ca5afe4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75d5332d-f42b-4325-aaa9-a0ce3187e996",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAndResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}